--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 						</section>
 					</div>
 
-					<div class="features projects">
+					<div class="features">
 						<section>
 							<img class="projimage" src="images/plutodataviz.png" alt="data visualization map" data-position="top right"/>
 						</section>
