hide about me page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 				<nav>
 					<ul>
 						<li><a href="#intro">Welcome</a></li>
-						<li><a href="#aboutme">About Me</a></li>
+						<!-- <li><a href="#aboutme">About Me</a></li> -->
 						<li><a href="#methodologies">Methodologies</a></li>
 						<li><a href="#projects">Projects</a></li>
 						<!-- <li><a href="#two">What we do</a></li>
