--- a/hiddengems.html
+++ b/hiddengems.html
@@ -28,7 +28,7 @@
 	<!-- Wrapper -->
 	<div id="wrapper">
 	  <!-- Main -->
-	  <section id="main" class="wrapper">
+	  <section id="main" class="wrapper projects">
 		<div class="inner">
 		  <div>
 			<h1 id="featuredprojecthiddengems" class="major">Hidden Gems</h1>
@@ -42,8 +42,6 @@
 			</p>
 			<div class="video">
 			  <iframe
-				width="560"
-				height="315"
 				src="https://www.youtube.com/embed/Nl6U7GU6v0Y?si=dQWDpQbKQpUHG3S7"
 				title="YouTube video player"
 				frameborder="0"
