--- a/plutouserinsights.html
+++ b/plutouserinsights.html
@@ -31,7 +31,7 @@
 	<div id="wrapper">
 
 	  <!-- Main -->
-	  <section id="main" class="wrapper">
+	  <section id="main" class="wrapper projects">
 		<div class="inner">
 		<h1 class="major">Regional Growth Insights and Strategic Localization Planning</h1>
 
@@ -51,14 +51,14 @@
 		  
 			<div class="features">
 				<section>
-				<span class="icon solid major fa-info"></span>
+				<!-- <span class="icon solid major fa-info"></span> -->
 				<h2>Objective:</h2>
 				<p>
 					To uncovered actionable insights about our user base’s growth and to forecast future trends that could guide server infrastructure decisions and localization efforts.
 				</p>
 				</section>
 				<section>
-				<span class="icon solid major fa-toolbox"></span>
+				<!-- <span class="icon solid major fa-toolbox"></span> -->
 				<h2>Tools Used:</h2>
 				<ul>
 				<li><strong>Tableau Desktop:</strong> For data visualization and clustering analysis.</li>
@@ -118,8 +118,10 @@
 		<!-- country usage -->
 		<section id="world-map">
 			<h3>World Map of Product Usage</h3>
-			<p>Interactive map can be filtered by United States usage, usage by non-US countries, and all countries. In addition, usage can be filtered according to month.</p>
-			<div class='tableauPlaceholder' id='viz1731283178789' style='position: relative'><noscript><a href='#'><img alt='Dashboard 7 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;co&#47;country-usage-ex&#47;Dashboard7&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='path' value='views&#47;country-usage-ex&#47;Dashboard7?:language=en-US&amp;:embed=true&amp;publish=yes&amp;:sid=&amp;:redirect=auth' /> <param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;co&#47;country-usage-ex&#47;Dashboard7&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1731283178789');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1000px';vizElement.style.height='827px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1000px';vizElement.style.height='827px';} else { vizElement.style.width='100%';vizElement.style.height='727px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+			<p>Interactive map can be filtered by United States usage, usage by non-US countries, and all countries. In addition, usage can be filtered according to month. <i>Please use desktop for the best interactive experience.</i></p>
+			<div class='tableauPlaceholder' id='viz1731283178789' style='position: relative'><noscript><a href='#'><img alt='Dashboard 7 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;co&#47;country-usage-ex&#47;Dashboard7&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='path' value='views&#47;country-usage-ex&#47;Dashboard7?:language=en-US&amp;:embed=true&amp;publish=yes&amp;:sid=&amp;:redirect=auth' /> <param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;co&#47;country-usage-ex&#47;Dashboard7&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1731283178789');                    var vizElement = divElement.getElementsByTagName('object')[0];                   			
+			vizElement.style.width='100%'; if ( divElement.offsetWidth > 800 ) { vizElement.style.height='827px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.height='662px';} else { vizElement.style.height='413px';}                 
+			var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
 		</section>
 		<!--  -->
 
@@ -127,7 +129,9 @@
 		<section id="country-cluster">
 			<h3>Country Cluster Patterns</h3>
 			<p>Interactive cluster map can be filtered by United States usage, usage by non-US countries, and all countries. While the majority of usage is from US users, filtering the map by non-US countries can help to identify future regions to prioritize.</p>
-			<div class='tableauPlaceholder' id='viz1731283539890' style='position: relative'><noscript><a href='#'><img alt='Dashboard Patterns ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Co&#47;CountryUsageClusters&#47;DashboardPatterns&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='CountryUsageClusters&#47;DashboardPatterns' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Co&#47;CountryUsageClusters&#47;DashboardPatterns&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1731283539890');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1000px';vizElement.style.height='827px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1000px';vizElement.style.height='827px';} else { vizElement.style.width='100%';vizElement.style.height='727px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+			<div class='tableauPlaceholder' id='viz1731283539890' style='position: relative'><noscript><a href='#'><img alt='Dashboard Patterns ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Co&#47;CountryUsageClusters&#47;DashboardPatterns&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='CountryUsageClusters&#47;DashboardPatterns' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Co&#47;CountryUsageClusters&#47;DashboardPatterns&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1731283539890');                    var vizElement = divElement.getElementsByTagName('object')[0];              
+			vizElement.style.width='100%'; if ( divElement.offsetWidth > 800 ) { vizElement.style.height='827px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.height='662px';} else { vizElement.style.height='413px';}                     
+			var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
 		</section>
 		<!--  -->
 
