--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 			content="width=device-width, initial-scale=1, user-scalable=no"
 		/>
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 		<noscript
 			><link rel="stylesheet" href="assets/css/noscript.css"
 		/></noscript>
