add font; update images; start i18n project page;

--- a/index.html
+++ b/index.html
@@ -102,12 +102,30 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 			<section id="projects" class="wrapper style3 fade-up">
 				<div class="inner">
 					<h2>Projects</h2>
-					<div class="features projects">
-						<section class="project-info">
-							<img class="projimage" src="images/urbangemsloadingscreen.png" alt="Project Urban Gems loading screen" data-position="top right"/>
-							<h3>Hidden Gems</h3>
+					
+					<div class="features">
+						<section>
+							<img class="projimage" src="images/vrtranslation.png" alt="A computer translating content for virtual reality" data-position="top right"/>
+							<h3>Scaling Localization and Internationalization for Pluto VR</h3>
 							<p>
-								<em>Hidden Gems</em> is a design project centered around
+								Pluto VR needed a scalable and developer-friendly workflow to expand our reach as we engaged with worldwide VR users.
+							</p>
+							<ul class="actions">
+								<li>
+									<a href="plutoi18n.html" class="button"
+										>More about Internationalization</a
+									>
+								</li>
+							</ul>
+						</section>
+					</div>
+
+					<div class="features">
+						<section>
+							<img class="projimage urbangems" src="images/urbangemsmobile.png" alt="Project Urban Gems loading screen" data-position="top right"/>
+							<h3>Urban Gems</h3>
+							<p>
+								<em>Urban Gems</em> is a design project centered around
 								creating engaging experience for users who want to discover new
 								things about their neighborhoods and enjoy spontaneous
 								adventures by uncovering local gems.
@@ -115,16 +133,16 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 							<ul class="actions">
 								<li>
 									<a href="hiddengems.html" class="button"
-										>More about Hidden Gems</a
+										>More about Urban Gems</a
 									>
 								</li>
 							</ul>
 						</section>
 					</div>
 
-					<div class="features projects">
-						<section class="project-info">
-							<img class="projimage" src="images/plutodataviz.png" alt="data visualization map" data-position="top right"/>
+					<div class="features">
+						<section>
+							<img class="projimage" src="images/datainsights.png" alt="graphic of world with location markers" data-position="top right"/>
 							<h3>User Insights at Pluto VR</h3>
 							<p>
 								Pluto VR's flagship product, <em>PlutoSphere</em>, empowers wireless VR headsets by linking users to high-performance cloud PCs, significantly expanding the capabilities of their VR experiences.	
@@ -132,8 +150,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 							<ul class="actions">
 								<li>
 									<a href="plutouserinsights.html" class="button"
-										>More about Pluto user insights</a
-									>
+										>More about Pluto user insights</a>
 								</li>
 							</ul>
 						</section>
