--- a/plutouserinsights.html
+++ b/plutouserinsights.html
@@ -11,6 +11,10 @@
 	<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
   </head>
   <body class="is-preload">
@@ -36,16 +40,18 @@
 		<h1 class="major">Regional Growth Insights and Strategic Localization Planning</h1>
 
 		<section>
-			<div>
+			<div class="features">
 				<section>
-				<h2>Overview</h2>
-				<p>
+					<img class="projimage" src="images/insightsmap.png" alt="Screenshot of interactive map usage" data-position="top right"/>
+					<h2>Overview</h2>
+					<p>
 					I analyzed user data to uncover regional growth trends and product usage patterns from February-July 2023. While most users were in the US, we could identify clusters of growing users in other countries.
 					Although the primary goal of reducing server costs couldn't be achieved due to third-party limitations, the insights informed future localization priorities based on regional growth trends.
-				</p>
-				<ul class="actions">
-					<li><a href="#world-map" class="button scrolly">Jump to Interactive World Map</a><a href="#country-cluster" class="button scrolly">Jump to Country Cluster Patterns</a></li>
-				</ul>
+					</p>
+					<ul class="actions">
+						<li><a href="#world-map" class="button scrolly">Jump to Interactive World Map</a></li>
+						<li><a href="#country-cluster" class="button scrolly">Jump to Country Cluster Patterns</a></li>
+					</ul>
 				</section>
 			</div>
 		  
