add images and organize

--- a/plutoi18n.html
+++ b/plutoi18n.html
@@ -41,20 +41,15 @@
 					Pluto VR needed a scalable and developer-friendly workflow to expand our reach as we engaged with worldwide VR users.
 					</p>
 				</section>
-			<!-- </div>
-			<div class="features">
-				<section class="project">
-					<img src="images/vrtranslation.png" alt="A computer translating content for virtual reality" data-position="top right"/>
-				</section> -->
 				<section class="project" style="flex-grow: 1;">
 					<h2>Role</h2>
 					<p>
 						Led research, tool selection, and implementation to create a scalable, developer-friendly localization workflow for a React.js project.
 					</p>
 				</section>	
-				
-
-				<section class="project" style='flex-grow: 2;'>
+			</div>
+			<div class="features">
+				<section class="project">
 					<h2>The Challenge</h2>
 					<ul>
 						<li>
@@ -64,52 +59,64 @@
 							<span>🌍</span> Translation Accuracy: Poor machine translations required manual review.
 						</li>
 						<li>
+							<span>📄</span> Developer Accuracy: Prior process required duplicate entries in each translation file and subjective JSON hierarchy structure of phrases.
+						</li>
+						<li>
 							<span>🏗</span> Developer Training: Engineers lacked familiarity with localization best practices.
 						</li>
 						<li>
 							<span>🔍</span> UI Context for Translators: Without UI previews, translations lacked accuracy.
 						</li>
-						<li>
-							👀 Visual: A diagram or simple flowchart of the old vs. new process
-						</li>
 					</ul>
-				</section>	
-
-				<section class="project">
-					<h2>Process</h2>
-					<ol>
-						<li>
-							Step 1. Research & Tool Selection
-							<ul>
-								<li>
-									Table comparing TMS options (columns: Name | Features | API Integration | Cost | Pros & Cons)
-								</li>
-								<li>
-									Screenshot of an email exchange or meeting notes from vendor discussions
-								</li>
-							</ul>
-						</li>
-						<li>
-							Step 2. Implementing & Testing Localization
-							Code snippet showcasing react-intl integration
-						</li>
-						<li>
-							Screenshot of Storybook previews with different language versions
-						</li>
-						<li>
-							Step 3. Documentation & Training
-							Sample diagram of translation workflow
-							Screenshot of training slides or documentation (blur out any sensitive content)
-							👀 Visual: A side-by-side comparison of the UI before & after localization
-						</li>
-					</ul> 
 				</section>
+				<section class="project">
+					<img src="images/translation challenges.png" alt="Image of developer panicking over duplication of translation phrases">
+				</section>	
+			</div>
+			<div class="features">
+				<section class="project top">
+					<h2>Process</h2>
+				</section>
+				<section class="project top"></section>
+				<section class="project">
+					<h3>Step 1. Research & Tool Selection</h3>
+					<p>Compare translation management service (TMS) options</p>
+					<img src="images/TMS notes.png" alt="notes for TMS">
+					<p>Review translation services</p>
+					<img src="images/estimate.png" alt="Translations quote">
+					<p><em>Quote of translation costs</em></p>
+				</section>
+				<section class="project">
+					<h3>Step 2. Implementing & Testing Localization</h3>
+					<img src="images/storybook.png" alt="Screenshot of Storybook translating English to Korean">
+					<p><em>Screenshot of login page localization using Storybook</em></p>
+				</section>
+				<section class="project docs">
+					<h3>Step 3. Documentation & Training</h3>
+					<figure>
+						<figcaption>Types of Documentation Created</figcaption>
+							<ul>
+								<li>✅ Translation Flow</li>
+								<li>✅ Translation Task Creations</li>
+								<li>✅ Translator/Developer Guide to Using Storybook</li>
+							</ul>
+					</figure>
+				</section>
+				<section class="project">
+					<img src="images/documentation.png" alt="Sample of training documentation">
+					<p><em>Documentation to help translators find visual context for phrases</em></p>
+				</section>
+			</div>
 
+			<div class="features">
 				<section class="project">
 					<h2>Outcomes</h2>
 					<ul>
 						<li>
 							✅ Faster localization process with seamless TMS integration
+						</li>
+						<li>
+							✅ Automates updates to JSON translation files through formatjs
 						</li>
 						<li>
 							✅ Improved translation accuracy through translator training & UI previews
@@ -118,11 +125,16 @@
 						</li>
 					</ul>
 				</section>
-
 				<section class="project">
-					<img src="images/processflowchart.png"/>
+					<img src="images/translation unique keys.png" alt="Graphic featuring formatjs unique key creation">
+					<p><em>Formatjs updates translation files by creating a unique key and phrase pair</em></p>
 				</section>
-				
+				<section>
+					<img src="images/processflowchart.png" class="flowchart" alt="Graph featuring new translation process flowchart">
+					<p><em>New flowchart process enables automated processes that hand off responsibilities of code and translations.</em></p>
+				</section>
+			</div>
+			<div class="feature">	
 				<section class="project">
 					<h2>Key Takeaways</h2>
 					<ul>
@@ -140,6 +152,7 @@
 			</div>
 		</section>
 	</div>
+
 
 	<!-- Footer -->
 	<footer id="footer" class="wrapper alt">
