--- a/plutouserinsights.html
+++ b/plutouserinsights.html
@@ -42,72 +42,85 @@
 		<section>
 			<div class="features">
 				<section>
-					<img class="projimage" src="images/insightsmap.png" alt="Screenshot of interactive map usage" data-position="top right"/>
 					<h2>Overview</h2>
 					<p>
 					I analyzed user data to uncover regional growth trends and product usage patterns from February-July 2023. While most users were in the US, we could identify clusters of growing users in other countries.
 					Although the primary goal of reducing server costs couldn't be achieved due to third-party limitations, the insights informed future localization priorities based on regional growth trends.
 					</p>
-					<ul class="actions">
-						<li><a href="#world-map" class="button scrolly">Jump to Interactive World Map</a></li>
-						<li><a href="#country-cluster" class="button scrolly">Jump to Country Cluster Patterns</a></li>
-					</ul>
+					<a href="#world-map" class="button scrolly">Jump to Interactive World Map</a>
+					<a href="#country-cluster" class="button scrolly">Jump to Country Cluster Patterns</a>
 				</section>
+				<!-- <section> -->
+
+				<!-- </section> -->
 			</div>
 		  
 			<div class="features">
-				<section>
+				<section class="project">
 				<!-- <span class="icon solid major fa-info"></span> -->
-				<h2>Objective:</h2>
+				<h2>Objective</h2>
 				<p>
 					To uncovered actionable insights about our user base’s growth and to forecast future trends that could guide server infrastructure decisions and localization efforts.
 				</p>
 				</section>
-				<section>
-				<!-- <span class="icon solid major fa-toolbox"></span> -->
-				<h2>Tools Used:</h2>
-				<ul>
-				<li><strong>Tableau Desktop:</strong> For data visualization and clustering analysis.</li>
-				<li><strong>Tableau Prep:</strong> For initial data cleaning and organizing usage data.</li>
-				</ul>
-				</section>		
+				<section class="project">
+					<!-- <span class="icon solid major fa-toolbox"></span> -->
+					<h2>Tools Used</h2>
+					<ul>
+					<li><strong>Tableau Desktop:</strong> For data visualization and clustering analysis.</li>
+					<li><strong>Tableau Prep:</strong> For initial data cleaning and organizing usage data.</li>
+					</ul>
+				</section>	
 			</div>
-			<h2>Key Responsibilities:</h2>
-			<ul>
-				<li><strong>Data Analysis:</strong> Analyzed regional usage data from February to July to identify growth trends.</li>
-				<li><strong>Clustering Countries:</strong> Grouped countries with higher usage (such as Canada and Germany) to identify growth clusters.</li>
-				<li><strong>Recommendations for Localization:</strong> Suggested regions for future localization efforts based on user activity.</li>
-				<li><strong>Collaboration:</strong> Presented findings to the CEO, board member, and team.</li>
-			</ul>
 
-			<h2>Process:</h2>
 			<div class="features">
-				<section class="process-list">
+				<section class="project">
+					<img class="projimage map" src="images/insightsmap.png" alt="Screenshot of interactive map usage" data-position="top right"/>
+				</section>
+				<section class="project">
+					<h2>Key Responsibilities</h2>
+					<ul>
+						<li><strong>Data Analysis:</strong> Analyzed regional usage data from February to July to identify growth trends.</li>
+						<li><strong>Clustering Countries:</strong> Grouped countries with higher usage (such as Canada and Germany) to identify growth clusters.</li>
+						<li><strong>Recommendations for Localization:</strong> Suggested regions for future localization efforts based on user activity.</li>
+						<li><strong>Collaboration:</strong> Presented findings to the CEO, board member, and team.</li>
+					</ul>					
+				</section>	
+			</div>
+
+			<div class="features">
+				<section class="project top">
+					<h2>Process</h2>
+				</section>
+				<section class="project top">
+				</section>
+				<section class="project">
+					
 					<h3>1. Challenge: Lack of Clear Goals</h3>
 					<p>With no specific goals from leadership, I took the initiative to explore user data and identify regions of growth.</p>
 				</section>
-				<section class="process-list">
+				<section class="project">
 					<h3>2. Data Collection and Preparation</h3>
 					<ul>
 						<li>Cleaned and organized the data.</li>
 						<li>Pulled user data, focusing on geographic regions and usage patterns.</li>
 					</ul>
 				</section>
-				<section class="process-list">
+				<section class="project">
 					<h3>3. Analysis in Tableau</h3>
 					<ul>
 						<li>Visualized user growth trends by country and time period (February to July).</li>
 						<li>Used clustering techniques to group countries with significant user bases and similar growth trajectories.</li>
 					</ul>
 				</section>
-				<section class="process-list">
+				<section class="project">
 					<h3>4. Insights and Findings</h3>
 					<ul>
 						<li>While the US had the largest user base, other countries could be clustered into similar usage groups, indicating potential for localized growth.</li>
 						<li>Clustering helped identify which larger regions should be prioritized once we had the funds for localization.</li>
 					</ul>
 				</section>
-				<section class="process-list full-width">
+				<section>
 					<h3>5. Impact</h3>
 					<ul>
 						<li><strong>Strategic Localization Planning:</strong> My findings informed the founders and project manager about which regions to prioritize for future localization, supporting decision-making for when funds became available.</li>
@@ -115,14 +128,19 @@
 					</ul>
 				</section>
 			</div>
-			 <h2>Outcome:</h2>
-			 <p>
-			 Although the project didn’t result in immediate cost savings due to third-party constraints, it provided a strategic foundation for future growth.
-			 The findings helped the leadership team prioritize countries for localization, ensuring that resources would be allocated effectively when funding allowed.
-			 </p>
+
+			<div class="features">
+				<section>	
+					<h2>Outcome:</h2>
+					<p>
+						Although the project didn’t result in immediate cost savings due to third-party constraints, it provided a strategic foundation for future growth.
+						The findings helped the leadership team prioritize countries for localization, ensuring that resources would be allocated effectively when funding allowed.
+					</p>
+
+
 
 		<!-- country usage -->
-		<section id="world-map">
+		<section id="world-map" class="dataviz">
 			<h3>World Map of Product Usage</h3>
 			<p>Interactive map can be filtered by United States usage, usage by non-US countries, and all countries. In addition, usage can be filtered according to month. <i>Please use desktop for the best interactive experience.</i></p>
 			<div class='tableauPlaceholder' id='viz1731283178789' style='position: relative'><noscript><a href='#'><img alt='Dashboard 7 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;co&#47;country-usage-ex&#47;Dashboard7&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='path' value='views&#47;country-usage-ex&#47;Dashboard7?:language=en-US&amp;:embed=true&amp;publish=yes&amp;:sid=&amp;:redirect=auth' /> <param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;co&#47;country-usage-ex&#47;Dashboard7&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1731283178789');                    var vizElement = divElement.getElementsByTagName('object')[0];                   			
@@ -132,7 +150,7 @@
 		<!--  -->
 
 		<!-- Country clusters -->
-		<section id="country-cluster">
+		<section id="country-cluster" class="dataviz">
 			<h3>Country Cluster Patterns</h3>
 			<p>Interactive cluster map can be filtered by United States usage, usage by non-US countries, and all countries. While the majority of usage is from US users, filtering the map by non-US countries can help to identify future regions to prioritize.</p>
 			<div class='tableauPlaceholder' id='viz1731283539890' style='position: relative'><noscript><a href='#'><img alt='Dashboard Patterns ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Co&#47;CountryUsageClusters&#47;DashboardPatterns&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='CountryUsageClusters&#47;DashboardPatterns' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Co&#47;CountryUsageClusters&#47;DashboardPatterns&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1731283539890');                    var vizElement = divElement.getElementsByTagName('object')[0];              
@@ -141,7 +159,8 @@
 		</section>
 		<!--  -->
 
-
+	</section>
+</div>
 
 		</div>
 		</section>
