restyle for small screen;

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 			<div class="inner">
 				<nav>
 					<ul>
-						<li><a href="#intro">Welcome</a></li>
+						<li><a href="#aboutme">Welcome</a></li>
 						<!-- <li><a href="#aboutme">About Me</a></li> -->
 						<li><a href="#methodologies">Methodologies</a></li>
 						<li><a href="#projects">Projects</a></li>
@@ -42,15 +42,13 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 			<!-- Intro -->
 			<!-- One -->
 			<section id="aboutme" class="wrapper style1 fullscreen spotlights fade-up">
-				<section>
-					<div class="content intro">
-						<h1>Hi, I'm Jocelyn</h1>
-						<a href="#" class="photo"
-							><img src="images/joce.jpg" alt="photo of me"/>
-						</a>
-					</div>
-					<div class="content">
-						<div class="inner">
+				<div class="inner">
+					<section class="welcome">
+						<div class="content intro">	
+							<img src="images/joce.jpg" class="photo" alt="photo of me"/>
+						</div>
+						<div class="content">
+							<h1>Hi, I'm Jocelyn</h1>
 							<p>
 								I'm a UX researcher with a background in software development, and
 								I’ve spent my career focused on making tech truly useful for the
@@ -60,19 +58,21 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 								advocacy and research, I bring a user-first mindset to everything I
 								do.
 							</p>
-							
 							<ul class="actions">
 								<li>
 									<a href="#methodologies" class="button scrolly">My Methods</a>
+								</li>
+								<li>
+									<a href="#projects" class="button scrolly">My Projects</a>
 								</li>
 							</ul>
 
 						</div>
 					</div>
-				</section>
+				<!-- </section> -->
 			</section>
 
-			<section id="methodologies" class="wrapper style2 fade-up">
+			<section id="methodologies" class="wrapper style2 fullscreen spotlights fade-up">
 				<div class="inner">
 					<h2>Methodologies</h2>
 					<table>
@@ -99,59 +99,61 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 				</div>
 			</section>
 
-			<!-- <section id="projects" class="wrapper style3 fade-up"> -->
+
 			<section id="projects" class="wrapper style3 fullscreen spotlights fade-up">
 				<div class="inner">
-				<h2>Projects</h2>
-				</div>
-				<section>
-					<div class="content">
-						<img class="projimage" src="images/vrtranslation.png" alt="A computer translating content for virtual reality" data-position="top right"/>
-					</div>
-					<div class="content">
-						<h3>Scaling Localization and Internationalization for Pluto VR</h3>
-						<p>
-							Pluto VR needed a scalable and developer-friendly workflow to expand our reach as we engaged with worldwide VR users.
-						</p>
-						<a href="plutoi18n.html" class="button">
-							More about Internationalization
-						</a>
-					</div>
-				</section>
+					<h2>Projects</h2>
 
-				<section>
-					<div class="content">
-						<img class="projimage" src="images/datainsights.png" alt="graphic of world with location markers" data-position="top right"/>
-					</div>
-					<div class="content">
-						<h3>User Insights at Pluto VR</h3>
-						<p>
-							Pluto VR's flagship product, <em>PlutoSphere</em>, empowers wireless VR headsets by linking users to high-performance cloud PCs, significantly expanding the capabilities of their VR experiences.	
-						</p>
-						<a href="plutouserinsights.html" class="button">
-							More about Pluto user insights
-						</a>
-					</div>
-				</section>		
-
-
-				<section>
-					<div class="content">
-						<img class="projimage urbangems" src="images/urbangemsmobile.png" alt="Project Urban Gems loading screen" data-position="top right"/>
-					</div>
-					<div class="content">
-						<h3>Urban Gems</h3>
-						<p>
-							<em>Urban Gems</em> is a design project centered around
-							creating engaging experience for users who want to discover new
-							things about their neighborhoods and enjoy spontaneous
-							adventures by uncovering local gems.
-						</p>
-						<a href="urbangems.html" class="button">
-							More about Urban Gems
+					<section class="portfolio-project">
+						<div class="content">
+							<img class="projimage" src="images/vrtranslation.png" alt="A computer translating content for virtual reality" data-position="top right"/>
+						</div>
+						<div class="content">
+							<h3>Scaling Localization and Internationalization for Pluto VR</h3>
+							<p>
+								Pluto VR needed a scalable and developer-friendly workflow to expand our reach as we engaged with worldwide VR users.
+							</p>
+							<a href="plutoi18n.html" class="button">
+								More about Internationalization
 							</a>
-					</div>
-				</section>
+						</div>
+					</section>
+
+					<section class="portfolio-project">
+						<div class="content">
+							<img class="projimage" src="images/datainsights.png" alt="graphic of world with location markers" data-position="top right"/>
+						</div>
+						<div class="content">
+							<h3>User Insights at Pluto VR</h3>
+							<p>
+								Pluto VR's flagship product, <em>PlutoSphere</em>, empowers wireless VR headsets by linking users to high-performance cloud PCs, significantly expanding the capabilities of their VR experiences.	
+							</p>
+							<a href="plutouserinsights.html" class="button">
+								More about Pluto user insights
+							</a>
+						</div>
+					</section>		
+
+					<section class="portfolio-project">
+						<div class="content">
+							<img class="projimage urbangems" src="images/urbangemsmobile.png" alt="Project Urban Gems loading screen" data-position="top right"/>
+						</div>
+						<div class="content">
+							<div class='inner'>
+							<h3>Urban Gems</h3>
+							<p>
+								<em>Urban Gems</em> is a design project centered around
+								creating engaging experience for users who want to discover new
+								things about their neighborhoods and enjoy spontaneous
+								adventures by uncovering local gems.
+							</p>
+							<a href="urbangems.html" class="button">
+								More about Urban Gems
+								</a>
+								</div>
+						</div>
+					</section>
+				</div> 
 			</div>
 		</section>
 			<!-- </section> -->
