--- a/plutoi18n.html
+++ b/plutoi18n.html
@@ -134,8 +134,8 @@
 					<p><em>New flowchart process enables automated processes that hand off responsibilities of code and translations.</em></p>
 				</section>
 			</div>
-			<div class="feature">	
-				<section class="project">
+			<div class="features">	
+				<section>
 					<h2>Key Takeaways</h2>
 					<ul>
 						<li>
